JDK9 client build broken on Windows

XMLWordPrintable

    • b68
    • generic
    • windows

        The fix for JDK-8003399 is causing a build failure on Windows:

        (/cygdrive/c/jprt/T/P1/160612.ddehaven/s/build/windows-x86_64-normal-server-release/configure-support/bin/fixpath.exe -c /cygdrive/c/progra~2/micros~1.0/vc/bin/amd64/cl -nologo -Zi -MD -Zc:wchar_t- -W3 -wd4800 -DWIN32_LEAN_AND_MEAN -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -D_WINSOCK_DEPRECATED_NO_WARNINGS -DWIN32 -DIAL -D_AMD64_ -Damd64 -D_LITTLE_ENDIAN -DWINDOWS -DARCH='"amd64"' -Damd64 -DNDEBUG -DRELEASE='"1.9.0-internal"' -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.base/share/native/include -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.base/windows/native/include -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.base/windows/native/include -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/build/windows-x86_64-normal-server-release/support/headers/java.desktop -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/libawt -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/libawt/awt -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/libawt/awt/image -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/libawt/awt/image/cvutils -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/libawt/awt/image/gif -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/libawt/awt/medialib -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/libawt/java2d -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/libawt/java2d/loops -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/libawt/java2d/pipe -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/java2d -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/java2d/d3d -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/java2d/opengl -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/java2d/opengl/J2D_GL -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/java2d/windows -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/common/awt/debug -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/common/awt -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/common/awt/utility -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/common/awt/utility -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/common/font -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/common/java2d/opengl -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/common/java2d/opengl/J2D_GL -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.base/windows/native/libjava -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.base/share/native/libjava -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/libmlib_image -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/common/awt/medialib -D__MEDIALIB_OLD_NAMES -D__USE_J2D_NAMES -DMLIB_NO_LIBSUNMATH -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/common/font -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/common/java2d/opengl -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/common/java2d/opengl -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/include -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/share/native/include -I/cygdrive/c/jprt/T/P1/160612.ddehaven/s/build/windows-x86_64-normal-server-release/support/headers/java.base -EHsc -DUNICODE -D_UNICODE -DMLIB_OS64BIT -wd4297 -wd4244 -wd4267 -wd4996 -WX -O1 -I/cygdrive/c/progra~2/micros~1.0/vc/include -I/cygdrive/c/progra~2/micros~1.0/vc/atlmfc/include -I/cygdrive/c/progra~2/window~4/8.1/include/shared -I/cygdrive/c/progra~2/window~4/8.1/include/um -I/cygdrive/c/progra~2/window~4/8.1/include/winrt -I/cygdrive/c/progra~2/micros~1.0/vc/include -I/cygdrive/c/progra~2/micros~1.0/vc/atlmfc/include -I/cygdrive/c/progra~2/window~4/8.1/include/shared -I/cygdrive/c/progra~2/window~4/8.1/include/um -I/cygdrive/c/progra~2/window~4/8.1/include/winrt -DTHIS_FILE='"ShellFolder2.cpp"' -c -showIncludes -Fd/cygdrive/c/jprt/T/P1/160612.ddehaven/s/build/windows-x86_64-normal-server-release/support/native/java.desktop/libawt/ShellFolder2.pdb -Fm/cygdrive/c/jprt/T/P1/160612.ddehaven/s/build/windows-x86_64-normal-server-release/support/native/java.desktop/libawt/ShellFolder2.map -Fo/cygdrive/c/jprt/T/P1/160612.ddehaven/s/build/windows-x86_64-normal-server-release/support/native/java.desktop/libawt/ShellFolder2.obj /cygdrive/c/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp ; echo $? > /cygdrive/c/jprt/T/P1/160612.ddehaven/s/build/windows-x86_64-normal-server-release/support/native/java.desktop/libawt/ShellFolder2.d.exitvalue) | /cygdrive/c/cygwin/bin/tee /cygdrive/c/jprt/T/P1/160612.ddehaven/s/build/windows-x86_64-normal-server-release/support/native/java.desktop/libawt/ShellFolder2.d.raw | /cygdrive/c/cygwin/bin/grep -v -e "^Note: including file:" -e "^ShellFolder2.cpp$" || test "$?" = "1" ; exit `cat /cygdrive/c/jprt/T/P1/160612.ddehaven/s/build/windows-x86_64-normal-server-release/support/native/java.desktop/libawt/ShellFolder2.d.exitvalue`
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1294) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1295) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1296) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1297) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1298) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1299) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1300) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1301) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1302) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1303) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1304) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1305) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1306) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1307) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1308) : error C3861: 'DASSERT': identifier not found
        c:/jprt/T/P1/160612.ddehaven/s/jdk/src/java.desktop/windows/native/libawt/windows/ShellFolder2.cpp(1309) : error C3861: 'DASSERT': identifier not found
        Awt2dLibraries.gmk:239: recipe for target '/cygdrive/c/jprt/T/P1/160612.ddehaven/s/build/windows-x86_64-normal-server-release/support/native/java.desktop/libawt/ShellFolder2.obj' failed
        make[3]: Leaving directory '/cygdrive/c/jprt/T/P1/160612.ddehaven/s/make'
        make/Main.gmk:168: recipe for target 'java.desktop-libs' failed
        make[2]: *** Waiting for unfinished jobs....

              Assignee:
              Philip Race
              Reporter:
              David Dehaven (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: