8081231: JDK9 client build broken on Windows

Reviewed-by: azvegint